--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                 <input type="tel" >  
                               </label>
                             <button class="default-btn" type="submit">
-                                Получить консультацию
+                                Получить консультацию и не получить звиздюлей
                             </button>
                     </div>
                 </form>
