--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
     <title>Document</title>
 </head>
 
@@ -68,9 +68,8 @@
     </section>
     <section class="advantage">
         <div class="container">
-            <div class="advantage__title">
-                Что вы получите на бесплатном вебинаре
-            </div>
+            <h2 class="advantage__title title-pd">Что вы получите на бесплатном вебинаре</h2>
+
             <div class="advantage__items">
                 <div class="advantage__item">
                     <img src="img/advantage-1.png" alt="">
@@ -119,9 +118,7 @@
     </section>
     <section class="next-webs">
         <div class="container">
-            <div class="next-webs__title">
-                Ближайшие вебинары
-            </div>
+            <h2 class="next-webs__title title-pd">Ближайшие вебинары</h2>
             <div class="next-webs__items">
                 <div class="next-webs__item">
                     <div class="next-webs__item-text">
@@ -182,9 +179,7 @@
         <div class="container">
             <div class="speaker__inner">
                 <div class="speaker__text">
-                    <div class="speaker__title">
-                        Кто приглашает на вебинар
-                    </div>
+                    <h2 class="speaker__title">Кто приглашает на вебинар</h2>
                     <p>
                         Владимир Герасичев — основатель, генеральный директор и ведущий бизнес-тренер компании АВА
                         Marketing.
@@ -225,9 +220,7 @@
     </section>
     <section class="comments">
         <div class="container">
-            <div class="comments__title">
-                Отзывы слушателей
-            </div>
+            <h2 class="comments__title title-pd">Отзывы слушателей</h2>
             <div class="comments__items">
                 <div class="comments__item">
                     <div class="comments__commentator">
@@ -271,39 +264,51 @@
         </div>
     </section>
     <div class="video-container">
-        <img src="img/player-bg.jpg" alt="">
-        <div class="video-container-inner">
-            <div class="video-container__icon">
-                <span class="icon-play"></span>
-            </div>
-            <div class="video-container__text">
-                Посмотрите личное
-                видеоприглашение
-                от Владимира Герасичева
+        <div class="container">
+            <div class="video-container__inner">
+                <div class="video-container__play">
+                    <a data-fancybox data-src="#modal" href="javascript:;" class="video-container__icon ">
+                        <span class="icon-play"></span>
+                    </a>
+                    <div class="video-container__text">
+                        Посмотрите личное
+                        видеоприглашение<br>
+                        от Владимира Герасичева
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <section class="form">
         <div class="container">
             <div class="form__inner">
-                <div class="form__title">Хотите стать предпринимателем, создать пассывный доход
-                    и построить карьеру с компанией АВА Marketing?</div>
+                <h2 class="form__title">Хотите стать предпринимателем, создать пассывный доход
+                    и построить карьеру с компанией АВА Marketing?</h2>
+                <p class="form__text">Спросите меня как, оставив заявку ниже:</p>
             </div>
             <div class="form__box">
-                <form>
+                <form method="post">
                     <div class="form__box-inner">
-                            <label>
-                              <input type="text" placeholder="Имя">  
-                            </label>
-                            <label>
-                                <input type="email" placeholder="Email">  
-                              </label>
-                              <label>
-                                <input type="tel" >  
-                              </label>
-                            <button class="default-btn" type="submit">
-                                Получить консультацию и не получить звиздюлей
-                            </button>
+                        <div class="form__box-main">
+                        <label>
+                            <input type="text" id="form-name" placeholder="Имя">
+                        </label>
+                        <label>
+                            <input type="email" id="form-email" placeholder="Email">
+                        </label>
+                        <label>
+                            <input type="tel" id="form-tel" placeholder="Номер телефона">
+                        </label>
+                        <button class="default-btn" type="submit">
+                            Получить консультацию
+                        </button>
+                    </div>
+                        <div class="checkbox-block"><label>
+                            <input type="checkbox" id="form-check"><span class="checkbox-in">Нажимая на кнопку, Вы даете
+                                согласие на обработку персональных данных
+                                и соглашаетесь с </span><a href="#" class="confidence">Политикой
+                                конфиденциальности</a></label></div>
+                        
                     </div>
                 </form>
             </div>
@@ -318,6 +323,14 @@
             </div>
         </div>
     </footer>
+
+
+    <div id="modal">
+        <div class="video-frame"></div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
