--- a/index.html
+++ b/index.html
@@ -616,6 +616,26 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="article__item hidden">
+                                <div class="article__item-image">
+                                    <img src="img/article-photo-7.jpg" alt="">
+                                </div>
+                                <div class="article__item-text article__new-blocks">
+                                    <div class="article__item-date">
+                                        <p class="article__time">10.07.20</p>
+                                        <p class="article__read">Читать 7 мин</p>
+                                    </div>
+                                    <div class="article__item-users">
+                                        <p class="article__answers">58 ответов</p>
+                                        <div class="icons">
+                                            <img src="img/blog-user-1.png" alt="">
+                                            <img src="img/blog-user-2.png" alt="">
+                                            <img src="img/blog-user-3.png" alt="">
+                                            <span class="article__other-users">+54</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="article__finance-btn-wrapper">
                             <div onclick="showMore('.article__finance .articles', '.article__finance-btn-wrapper')"
