--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             </div>
-            <div class="next-webs__items hidden">
+            <div class="next-webs__items hidden ">
                 <div class="next-webs__item">
                     <div class="next-webs__item-text next-webs__new-block">
                         <div class="next-webs__item-date">
@@ -197,7 +197,7 @@
                         <img src="img/next-webs-bg-2.jpg" alt="">
                     </div>
                 </div>
-                <div class="next-webs__item">
+                <div class="next-webs__item next-webs__last">
                     <div class="next-webs__item-text next-webs__new-block">
                         <div class="next-webs__item-date">
                             <span class="icon-calendar-check-o"></span>19 aвгуста 2020 в 20:00
