--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <ul class="header__contacts">
-            <li><a href="#" class="owner">Владимир Герасичев</a></li>
+            <li><p href="#" class="owner">Владимир Герасичев</p></li>
             <li><a href="#" class="facebook"><span class="icon-facebook"></span></a></li>
             <li><a href="#" class="vk"><span class="icon-vk"></span></a></li>
             <li><a href="#" class="linkedin"><span class="icon-linkedin"></span></a></li>
