--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header">
         <ul class="header__contacts">
-            <li><p href="#" class="owner">Владимир Герасичев</p></li>
+            <li><p class="owner">Владимир Герасичев</p></li>
             <li><a href="#" class="facebook"><span class="icon-facebook"></span></a></li>
             <li><a href="#" class="vk"><span class="icon-vk"></span></a></li>
             <li><a href="#" class="linkedin"><span class="icon-linkedin"></span></a></li>
@@ -356,7 +356,7 @@
             </div>
         </div>
     </section>
-    <section class="blog">
+    <div class="blog">
         <div class="container">
             <div class="blog__inner">
                 <article class="article-container">
@@ -894,19 +894,29 @@
                         <h3 class="article__title">Интересное видео</h3>
                         <div class="aside__item aside-videos">
                             <div class="aside__video">
+                                <a data-fancybox data-src="#modal" href="javascript:;" >
                                 <img src="img/poster-1.jpg" alt="">
+                                </a>
                             </div>
                             <div class="aside__video">
+                                <a data-fancybox data-src="#modal" href="javascript:;" >
                                 <img src="img/poster-2.jpg" alt="">
+                            </a>
                             </div>
                             <div class="aside__video">
+                                <a data-fancybox data-src="#modal" href="javascript:;" >
                                 <img src="img/poster-3.jpg" alt="">
+                            </a>
                             </div>
                             <div class="aside__video hidden">
+                                <a data-fancybox data-src="#modal" href="javascript:;" >
                                 <img src="img/poster-3.jpg" alt="">
+                            </a>
                             </div>
                             <div class="aside__video hidden">
+                                <a data-fancybox data-src="#modal" href="javascript:;" >
                                 <img src="img/poster-3.jpg" alt="">
+                            </a>
                             </div>
                             <div class="aside__btn">
                                 <a onclick="showMore('.aside-videos', '.aside-videos .aside__btn')">Больше видео</a>
@@ -1033,7 +1043,7 @@
                 </aside>
             </div>
         </div>
-    </section>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="footer__inner">
